--- a/vignettes/Case studies/xTestingODESolver.Rmd
+++ b/vignettes/Case studies/xTestingODESolver.Rmd
@@ -1,4 +1,13 @@
-
+---
+title: "ODE solver set up"
+author: " Valerie de Rijk"
+date: "`r Sys.Date()`"
+output: github_document
+editor_options: 
+  chunk_output_type: console
+  markdown: 
+    wrap: 72
+---
 ```{r setup, include=FALSE}
 knitr::knit_meta()
 knitr::opts_chunk$set(echo = TRUE)
@@ -8,7 +17,6 @@ knitr::opts_knit$set(root.dir = projectRoot)
 ```
 
 ```{r Initialize World}
-substance <-  "nAg_10nm"
 source("baseScripts/initWorld_onlyParticulate.R")
 
 
@@ -35,117 +43,7 @@ e is the emission to each compartment per unit of time, e.g. 1 t/y.
 
 To solve this set of differential equations we thus need an emission, e.g. 1 ton/year to air. The height of this emission is not
 
-```{r constant emission}
-emissions <- data.frame(Abbr = "w1CS", 
-                        Emis = 43)
-emissions$Emis<- emissions$Emis * 1000 / (365.25 * 24 * 60 * 60) # convert 1 t/y to si units: kg/s
 
-# TODO: explain what is the reason for this Abbr? Why is it not a relational table defining scale, compartment and species as for all other data?
-```
-
-Now we are ready to run the solver, which results in the mass in each compartment.
-
-```{r Solution Steady}
-SolutionSteady <- World$Solve(emissions)
-SolutionSteady <- SolutionSteady |>
-  filter(Species != "Unbound")
-```
-
-```{r ODE Steady}
-SimpleBoxODE = function(t, m, parms) {
-
-  with(as.list(c(parms, m)), {
-    e <- c(rep(0, length(SBNames)))
-    for (name in names(emis)) {
-      e[grep(name, SBNames)] <- emis[[name]] * (t[2] -t [1])
-    }
-    dm <- K%*% m + e
-    res <- c(dm)
-    list(res, signal = e)
-  })
-}
-
-SBsolve4 <- function( tmax = 1e10, nTIMES = 100, Engine) {
-
-  SB.K = Engine
-  SBNames = colnames(Engine)
-  SB.m0 <- rep(0, length(SBNames))
-  SBtime <- seq(0,tmax,length.out = nTIMES)
-  emis <- data.frame(w1CS = (43*1000))
-
-
-  out <- deSolve::ode(
-    y = as.numeric(SB.m0),
-    times = SBtime ,
-    func = SimpleBoxODE,
-    parms = list(K = SB.K, SBNames=SBNames, emis= emis),
-    rtol = 1e-10, atol = 1e-2)
-  #if(as.character(class(deS)[1])!="data.frame") return (list(errorstate="error", deS))
-  colnames(out)[1:length(SBNames)+1] <- SBNames
-  colnames(out)[grep("signal",colnames(out))] <- paste("emis",SBNames,sep = "2")
-  as.data.frame(out) }
-
-SolutionConstantEmissions <- SBsolve4(tmax = 25*(365.25*24*3600),
-  nTIMES = 25,
-  Engine = World$exportEngineR())
-
-```
-
-
-```{r mass steady}
-library(dplyr)
-TotalMass <- SolutionSteady |>
-  summarise(TotalMass = sum(EqMass, na.rm = TRUE)) %>%
-  pull(TotalMass)
-
-nTIMES = 25
-MassConstantemissions <- SolutionConstantEmissions |>
-  mutate(row_number = row_number())
-MassConstantemissions <- MassConstantemissions |>
-  filter(row_number == (nTIMES - 1)) |>
-  select(-row_number)
-
-columns_to_sum <- MassConstantemissions[, !names(MassConstantemissions) %in% c("time")]
-
-# Calculate the row-wise sum of the selected columns
-row_sums <- rowSums(columns_to_sum)
-print(row_sums)
-print(TotalMass)
-
-```
-
-```{r Emission Check}
-ggplot(SolutionConstantEmissions, aes(x = time, y = emis2w1CS)) +
-  geom_line() +  
-  geom_hline(yintercept = 43*1000, linetype = "dashed", color = "red") +# Add a line for w1Cs2emis over time
-  labs(title = "Plot of w1Cs2emis against Time",
-       x = "Time",
-       y = "w1Cs2emis") +   # Add labels for axes and title
-  theme_minimal()      # Use a minimal theme
-```
-
-
-```{r plots Steady vs Constant Emissions}
-library (ggplot2)
-w1CS_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w1CS"]
-ggplot(SolutionConstantEmissions, aes(x = time, y = w1CS)) +
-  geom_line() +   
-  geom_hline(yintercept = w1CS_value, linetype = "dashed", color = "red")# Add a line for w1CS over time
-  labs(title = "Plot of w1CS against Time",
-       x = "Time",
-       y = "w1CS") +   # Add labels for axes and title
-  theme_minimal()  
-  
-w1CA_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w1CA"]
- ggplot(SolutionConstantEmissions, aes(x = time, y = w1CA)) +
-  geom_line() +   
-  geom_hline(yintercept = w1CA_value, linetype = "dashed", color = "red")# Add a line for w1CS over time
-  labs(title = "Plot of w1CA against Time",
-       x = "Time",
-       y = "w1CA") +   # Add labels for axes and title
-  theme_minimal()   
-
-```
 
 ```{r emission data}
 library(pracma)
@@ -208,25 +106,228 @@ plot(Emissions$year, Emissions$Emission_mean,
 
 ```
 
-
-```{r emission prep}
-
+```{r Prep Emission Steady}
 Emissions <- Emissions |>
   mutate(Abr = "w1CS")
+Emissions_avg <- Emissions[-nrow(Emissions), ]
+
+average_emission <- mean(Emissions_avg$Emission_mean, na.rm = TRUE)
+print(average_emission)
+emissions <- data.frame(Abbr = "w1CS", 
+                        Emis = average_emission)
+emissions$Emis<- emissions$Emis * 1000 / (365.25 * 24 * 60 * 60) # convert 1 t/y to si units: kg/s
+
+
+```
+
+
+Now we are ready to run the solver, which results in the mass in each compartment.
+
+```{r Solution Steady}
+SolutionSteady <- World$Solve(emissions)
+SolutionSteady <- SolutionSteady |>
+  filter(Species != "Unbound")
+```
+
+```{r ODE Steady}
+SimpleBoxODE = function(t, m, parms) {
+
+  with(as.list(c(parms, m)), {
+    e <- c(rep(0, length(SBNames)))
+    for (name in names(emis)) {
+      e[grep(name, SBNames)] <- emis[[name]] #* (t[2] -t [1])
+    }
+    dm <- K%*% m + e
+    res <- c(dm)
+    list(res, signal = e)
+  })
+}
+
+SBsolve4 <- function( tmax = 1e10, nTIMES = 100, Engine) {
+
+  SB.K = Engine
+  SBNames = colnames(Engine)
+  SB.m0 <- rep(0, length(SBNames))
+  SBtime <- seq(0,tmax,length.out = nTIMES)
+  emis <- data.frame(w1CS = (average_emission*1000)/(365.25*24*3600))
+
+
+  out <- deSolve::ode(
+    y = as.numeric(SB.m0),
+    times = SBtime ,
+    func = SimpleBoxODE,
+    parms = list(K = SB.K, SBNames=SBNames, emis= emis),
+    rtol = 1e-10, atol = 1e-2)
+  #if(as.character(class(deS)[1])!="data.frame") return (list(errorstate="error", deS))
+  colnames(out)[1:length(SBNames)+1] <- SBNames
+  colnames(out)[grep("signal",colnames(out))] <- paste("emis",SBNames,sep = "2")
+  as.data.frame(out) }
+
+SolutionConstantEmissions <- SBsolve4(tmax = 24*(365.25*24*3600),
+  nTIMES = 25,
+  Engine = World$exportEngineR())
+
+```
+
+
+```{r mass steady}
+library(dplyr)
+TotalMass <- SolutionSteady |>
+  summarise(TotalMass = sum(EqMass, na.rm = TRUE)) %>%
+  pull(TotalMass)
+
+nTIMES = 24
+MassConstantemissions <- SolutionConstantEmissions |>
+  mutate(row_number = row_number())
+MassConstantemissions <- MassConstantemissions |>
+  filter(row_number == (nTIMES - 1)) |>
+  select(-row_number)
+
+columns_to_sum <- MassConstantemissions[, !names(MassConstantemissions) %in% c("time")]
+
+# Calculate the row-wise sum of the selected columns
+row_sums <- rowSums(columns_to_sum)
+print(row_sums)
+print(TotalMass)
+
+```
+
+```{r Emission Check}
+ggplot(SolutionConstantEmissions, aes(x = time, y = emis2w1CS)) +
+  geom_line() +  
+  #geom_hline(yintercept = 43*1000, linetype = "dashed", color = "red") +# Add a line for w1Cs2emis over time
+  labs(title = "Plot of w1Cs2emis against Time",
+       x = "Time",
+       y = "w1Cs2emis") +   # Add labels for axes and title
+  theme_minimal()      # Use a minimal theme
+```
+
+
+```{r plots Steady vs Constant Emissions}
+library (ggplot2)
+w1CS_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w1CS"]
+ggplot(SolutionConstantEmissions, aes(x = time, y = w1CS)) +
+  geom_line() +   
+  geom_hline(yintercept = w1CS_value, linetype = "dashed", color = "red")# Add a line for w1CS over time
+  labs(title = "Plot of w1CS against Time",
+       x = "Time",
+       y = "w1CS") +   # Add labels for axes and title
+  theme_minimal()  
+  
+w1CA_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w1CA"]
+ ggplot(SolutionConstantEmissions, aes(x = time, y = w1CA)) +
+  geom_line() +   
+  geom_hline(yintercept = w1CA_value, linetype = "dashed", color = "red")# Add a line for w1CS over time
+  labs(title = "Plot of w1CA against Time",
+       x = "Time",
+       y = "w1CA") +   # Add labels for axes and title
+  theme_minimal()   
+
+```
+
+```{r ODE approxfun}
+tmax <- 25 * (365.25 * 24 * 3600)  # Total number of seconds in 25 years
+
+# Calculate emissions (constant rate)
+emissions <- (average_emission * 1000) / ( 365.25 * 24 * 3600)  # Emissions rate in kg/second
+times <- seq(0, tmax, length.out = 1000)
+# Generate time points (assuming you want to interpolate over some interval)
+emis_values <- rep(emissions, length(times))
+# Create approxfun
+emislist <- list(approxfun(times, emis_values))
+emis_fun <- emislist[["w1CS"]]
+names(emislist) <- "w1CS"
+
+
+
+
+SimpleBoxODE = function(t, m, parms) {
+
+  with(as.list(c(parms, m)), {
+    e <- c(rep(0, length(SBNames)))
+    for (name in names(emislist)) {
+      e[grep(name, SBNames)] <- emislist[[name]](t) 
+    }
+    dm <- K%*% m + e
+    res <- c(dm)
+    list(res, signal = e)
+  })
+}
+
+SBsolve4 <- function( tmax = 1e10, nTIMES = 100, Engine, emislist) {
+
+  SB.K = Engine
+  SBNames = colnames(Engine)
+  SB.m0 <- rep(0, length(SBNames))
+  SBtime <- seq(0,tmax,length.out = nTIMES)
+
+
+  out <- deSolve::ode(
+    y = as.numeric(SB.m0),
+    times = SBtime ,
+    func = SimpleBoxODE,
+    parms = list(K = SB.K, SBNames=SBNames, emislist= emislist),
+    rtol = 1e-10, atol = 1e-2)
+  #if(as.character(class(deS)[1])!="data.frame") return (list(errorstate="error", deS))
+  colnames(out)[1:length(SBNames)+1] <- SBNames
+  colnames(out)[grep("signal",colnames(out))] <- paste("emis",SBNames,sep = "2")
+  as.data.frame(out) }
+
+SolutionConstantApproxFun <- SBsolve4(tmax = 24*(365.25*24*3600),
+  nTIMES = 25,
+  Engine = World$exportEngineR(), 
+  emislist = emislist)
+
+```
+
+```{r Comparison of 3 results}
+
+w1CA_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w1CA"]
+w1CS_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w1CS"]
+w2CA_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "w2CA"]
+s1CA_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "s1CA"]
+print(s1CA_value)
+ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = w1CS)) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = w1CS), linetype = "dashed", color = "blue") +
+  geom_hline(yintercept = w1CS_value, linetype = "dashed", color = "red")# Add a line for w1CS over time
+  labs(title = "Plot of w1CS against Time",
+       x = "Time",
+       y = "w1CS") +   # Add labels for axes and title
+  theme_minimal() 
+ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = w1CA)) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = w1CA), linetype = "dashed", color = "blue") +
+  geom_hline(yintercept = w1CA_value, linetype = "dashed", color = "red") +
+  labs(title = "Plot of w1CA against Time",
+       x = "Time",
+       y = "w1CA") +
+  theme_minimal()
+
+ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = w2CA)) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = w2CA), linetype = "dashed", color = "green") +
+  geom_hline(yintercept = w2CA_value, linetype = "dashed", color = "red") +
+  labs(title = "Plot of w2CA against Time",
+       x = "Time",
+       y = "w2CA") +
+  theme_minimal()
+
+
+```
+
+
+```{r emission prep}
 
 Emissions <- Emissions |>
   mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60))
 
 Emissions <- Emissions |> 
-  mutate(Emission_mean_kg = (Emission_mean* 1000))
-Emissions <- Emissions |>
-  mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60)) |> ungroup() 
-  
+  mutate(Emission_mean_kg = (Emission_mean* 1000)/(365.25*24*60*60) )
 
 dfapprox<- data.frame(time_s = c(0,Emissions$time_s), emis_kg=c(0,Emissions$Emission_mean_kg))
 SBEmissions <- 
   Emissions |> 
-  mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60)) |> ungroup() |> 
   group_by(Abr) |> 
   summarise(n=n(),
             EmisFun = list(
@@ -272,81 +373,6 @@ curve(w1CS,
 
 
 ```
-<!-- Trial with events, probably not to be used. -->
-
-<!-- ```{r Events} -->
-
-<!-- events <- data.frame( -->
-<!--   var = "w1CS", -->
-<!--   time = Emissions$time_s, -->
-<!--   value = Emissions$Emission_mean_kg, -->
-<!--   method = "add" -->
-<!-- ) -->
-
-
-<!-- ``` -->
-
-<!-- ```{r with events, include = FALSE} -->
-
-
-<!-- # Define the ODE function without using funlist -->
-<!-- SimpleBoxODE <- function(t, m, parms) { -->
-<!--   with(as.list(c(parms, m)), { -->
-<!--     # Emission values for each compartment -->
-<!--     e <- c(rep(0, length(SBNames))) -->
-
-<!--     # Add events directly to the respective compartment -->
-<!--     if (!is.null(events) && any(events$time == t)) { -->
-<!--       event_idx <- which(events$time == t) -->
-<!--       for (idx in event_idx) { -->
-<!--         name <- events$var[idx] -->
-<!--         e[grep(name, SBNames)] <- events$value[idx] -->
-<!--       } -->
-<!--     } -->
-
-<!--     dm <- K %*% m + e -->
-<!--     res <- c(dm) -->
-<!--     list(res, signal = e) -->
-<!--   }) -->
-<!-- } -->
-
-<!-- # Function to solve ODE with events -->
-<!-- SBsolve4 <- function(tmax = 1e10, nTIMES = 100, Engine, events) { -->
-<!--   SB.K <- Engine -->
-<!--   SBNames <- colnames(Engine) -->
-<!--   SB.m0 <- rep(0, length(SBNames)) -->
-<!--   SBtime <- seq(0, tmax, length.out = nTIMES) -->
-
-<!--   out <- deSolve::ode( -->
-<!--     y = as.numeric(SB.m0), -->
-<!--     times = SBtime, -->
-<!--     func = SimpleBoxODE, -->
-<!--     parms = list(K = SB.K, SBNames = SBNames, events = events), -->
-<!--     rtol = 1e-10, atol = 1e-2 -->
-<!--   ) -->
-
-<!--   colnames(out)[1:length(SBNames) + 1] <- SBNames -->
-<!--   as.data.frame(out) -->
-<!-- } -->
-
-
-<!-- # Example engine matrix -->
-<!-- SBEngine <- World$exportEngineR()  # Example engine matrix -->
-
-<!-- # Solve the ODE -->
-<!-- results <- SBsolve4(tmax = (365.25*24*60*60)+(365.25*24*60*60*24), nTIMES = 25, Engine = SBEngine, events = events) -->
-
-<!-- print(head(results)) -->
-<!-- print(head(events)) -->
-
-<!-- # Plot the results -->
-<!-- plot(results$time, results$w1CS, type = "l", xlab = "Time (seconds)", ylab = "Emission (kg)") -->
-<!-- points(events$time, events$value, col = "red") -->
-
-<!-- #data is not right -->
-
-
-<!-- ``` -->
 
 ```{r original ode with approxfun}
 
@@ -403,7 +429,7 @@ SBsolve4 <- function( tmax = 1e10, nTIMES = 100, Engine, funlist) {
 #                               col_names = FALSE) |> slice(1) |> as.character()
 #
 # Solving
-Solution <- SBsolve4(tmax = 25*(365.25*24*3600),
+Solution <- SBsolve4(tmax = 24*(365.25*24*3600),
 nTIMES = 25,
 Engine = World$exportEngineR(),
 funlist = funlist)
@@ -413,7 +439,7 @@ funlist = funlist)
 #                      Engine = as.matrix(K.Matrix),
 #                      funlist = funlist)
 
-Solution <- as.data.frame(Solution)
+SolutionEmissionData <- as.data.frame(Solution)
 
 # Same plot of emission as above
 plot(Solution$time,Solution$emis2w1CS)
@@ -430,6 +456,72 @@ plot(Solution$time,Solution$sd1CA)
 
 ```
 
+```{r comparison to steady}
+
+
+# Plot for w2CA
+plot_w2CA <- ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = w2CA, color = "Constant Emissions")) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = w2CA, color = "Constant ApproxFun")) +
+  geom_line(data = SolutionEmissionData, aes(x = time, y = w2CA, color = "SolutionEmissionData")) +
+  geom_hline(yintercept = w2CA_value, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of w2CA against Time",
+       x = "Time (s)",
+       y = "w2CA [kg]",
+       color = "Data Source") +
+  scale_color_manual(values = c("Constant Emissions" = "black", "Constant ApproxFun" = "blue", "SolutionEmissionData" = "green")) +
+  theme_minimal()
+
+# Display the plot
+print(plot_w2CA)
+
+# Plot for w1CS
+plot_w1CS <- ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = w1CS, color = "Constant Emissions")) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = w1CS,  color = "Constant ApproxFun")) +
+  geom_line(data = SolutionEmissionData, aes(x = time, y = w1CS, color = "SolutionEmissionData")) +
+  geom_hline(yintercept = w1CS_value, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of w1CS against Time",
+       x = "Time (s)",
+       y = "w2CA [kg]",
+       color = "Data Source") +
+  scale_color_manual(values = c("Constant Emissions" = "black", "Constant ApproxFun" = "blue", "SolutionEmissionData" = "green")) +
+  theme_minimal()
+
+# Display the plot for w1CS
+print(plot_w1CS)
+
+# Plot for w1CA
+plot_w1CA <- ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = w1CA, color = "Constant Emissions")) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = w1CA,  color = "Constant ApproxFun")) +
+  geom_line(data = SolutionEmissionData, aes(x = time, y = w1CA, color = "SolutionEmissionData")) +
+  geom_hline(yintercept = w1CA_value, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of w1CA against Time",
+       x = "Time (s)",
+       y = "w2CA [kg]",
+       color = "Data Source") +
+  scale_color_manual(values = c("Constant Emissions" = "black", "Constant ApproxFun" = "blue", "SolutionEmissionData" = "green")) +
+  theme_minimal()
+s1CA_value <- SolutionSteady$EqMass[SolutionSteady$Abbr == "s1CA"]
+print(s1CA_value)
+
+plot_s1CA <- ggplot() +
+  geom_line(data = SolutionConstantEmissions, aes(x = time, y = s1CA, color = "Constant Emissions")) +
+  geom_line(data = SolutionConstantApproxFun, aes(x = time, y = s1CA,  color = "Constant ApproxFun")) +
+  geom_line(data = SolutionEmissionData, aes(x = time, y = s1CA, color = "SolutionEmissionData")) +
+  geom_hline(yintercept = s1CA_value, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of s1CA against Time",
+       x = "Time (s)",
+       y = "w2CA [kg]",
+       color = "Data Source") +
+  scale_color_manual(values = c("Constant Emissions" = "black", "Constant ApproxFun" = "blue", "SolutionEmissionData" = "green")) +
+  theme_minimal()
+
+print(plot_s1CA)
+
+
+```
 
 ```{r testing of flows}
 kaas <- World$kaas
@@ -440,6 +532,7 @@ print(w1cs)
 ```
 
 ```{r Concentrations Steady}
+library(knitr)
 Volume <- World$fetchData("Volume")
 Area <- World$fetchData("Area")
 FRACw <- World$fetchData("FRACw")
@@ -532,9 +625,9 @@ library(dplyr)
 nTIMES <- 25
 #seperate signals and matrix
 #compartments
-compartments <- Solution[, 1:156]
+compartments <- SolutionEmissionData[, 1:156]
 compartments <- compartments |> select(-matches("U$"))
-signals <- Solution[, 157:311]
+signals <- SolutionEmissionData[, 157:311]
 # Fetch necessary data
 Volume <- World$fetchData("Volume")
 Area <- World$fetchData("Area")
@@ -609,11 +702,9 @@ f_adjust_concentration <- function(CompConc, Fracw, Fraca, RHOsolid) {
 compartment_prefixes_scale_sd <- substr(names(CompartmentsConc_sediment), 1, 4)
 compartment_prefixes_scale_s <- substr(names(CompartmentsConc_soil), 1, 3)
 compartment_prefixes_combined_scale <- cbind(compartment_prefixes_scale_s, compartment_prefixes_scale_sd)
-print(compartment_prefixes_combined_scale)
 compartment_prefixes_sd <- substr(names(CompartmentsConc_sediment), 1, 3)
 compartment_prefixes_s <- substr(names(CompartmentsConc_soil),1, 2)
 compartment_prefixes_combined <- cbind(compartment_prefixes_s, compartment_prefixes_sd)
-print(compartment_prefixes_combined)
 
 # Get corresponding FRACw, FRACa, and Rho values for combined soil and sediment
 FRACw_values_combined <- FRACw$FRACw[match(compartment_prefixes_combined_scale, FRACw$compartment)]
@@ -643,6 +734,7 @@ CompartmentsConc_corrected <- CompartmentsConc
 # Overwrite the original soil and sediment columns with the adjusted values
 CompartmentsConc_corrected[, names(CompartmentsConc_combined_adjusted)] <- CompartmentsConc_combined_adjusted
 
+
 plot(CompartmentsConc_corrected$time, CompartmentsConc_corrected$w1CA, type = "l",
      xlab = "Time", ylab = "Concentration [g/L]",
      main = "Freshwater concentrations over time",
@@ -669,8 +761,11 @@ lines(CompartmentsConc_corrected$time, CompartmentsConc_corrected$s2CS, col = "g
 legend("topright", legend = c("s2CA", "s2CP", "s2CS"), col = c("blue", "red", "green"), lty = 1)
 
 CompartmentsConc_corrected[is.na(CompartmentsConc_corrected)] <- 0
-CompartmentsConc_corrected <- CompartmentsConc_corrected |>
-  mutate(across(where(is.numeric), ~ format(., scientific = TRUE)))
+CompartmentsConc_corrected[, -which(names(CompartmentsConc_corrected) == "time")] <- 
+  CompartmentsConc_corrected[, -which(names(CompartmentsConc_corrected) == "time")] * 1e9
+
+# CompartmentsConc_corrected <- CompartmentsConc_corrected |>
+#   mutate(across(where(is.numeric), ~ format(., scientific = TRUE)))
 CompartmentsConc_corrected  <- CompartmentsConc_corrected |>
   mutate(row_number = row_number())
 FinalConcentration <- CompartmentsConc_corrected |>
@@ -682,6 +777,7 @@ FinalConcentration <- FinalConcentration %>%
     names_to = "Compartment",
     values_to = "Concentration"
   )
+
 FinalConcentration <- FinalConcentration |> 
   mutate(Concentration = replace_na(Concentration, 0))
 kable(FinalConcentration)
@@ -710,17 +806,73 @@ print(row_sums)
 print(TotalMass)
 
 ```
+```{r Concentration Plots}
+# Convert all columns in CompartmentsConc to numeric
+CompartmentsConc[] <- lapply(CompartmentsConc, as.numeric)
 
+# Convert the Concentration column to numeric
+Concentration_eq$Concentration <- as.numeric(Concentration_eq$Concentration)
+w1CS_conc <- Concentration_eq$Concentration[Concentration_eq$Abbr == "w1CS"]
+ggplot(CompartmentsConc_corrected, aes(x = time, y = w1CS)) +
+  geom_line(color = "blue") +
+  geom_hline(yintercept = w1CS_conc, linetype = "dashed", color = "red", show.legend = TRUE)
+  labs(title = "Plot of w1CS against Time",
+       x = "Time",
+       y = "w1CS [ng/L]") +
+  theme_minimal()
+
+# Extract w1CA concentration
+w1CA_conc <- Concentration_eq$Concentration[Concentration_eq$Abbr == "w1CA"]
+
+# Plot w1CS against time
+ggplot(CompartmentsConc_corrected, aes(x = time, y = w1CS)) +
+  geom_line(aes(color = "dynamic")) +
+  geom_hline(yintercept = w1CS_conc, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of w1CS against Time",
+       x = "Time",
+       y = "w1CS [ng/L]") +
+  theme_minimal() +
+  scale_color_manual(name = "Legend", values = c("dynamic" = "blue", "steady" = "red"))
+
+# Plot w1CA against time
+ggplot(CompartmentsConc_corrected, aes(x = time, y = w1CA)) +
+  geom_line(aes(color = "dynamic")) +
+  geom_hline(yintercept = w1CA_conc, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of w1CA against Time",
+       x = "Time",
+       y = "w1CA [ng/L]") +
+  theme_minimal() +
+  scale_color_manual(name = "Legend", values = c("dynamic" = "blue", "steady" = "red"))
+
+# Plot w2CA against time
+ggplot(CompartmentsConc_corrected, aes(x = time, y = w2CA)) +
+  geom_line(aes(color = "dynamic")) +
+  geom_hline(yintercept = w2CA_conc, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of w2CA against Time",
+       x = "Time [s]",
+       y = "w2CA [ng/L]") +
+  theme_minimal() +
+  scale_color_manual(name = "Legend", values = c("dynamic" = "blue", "steady" = "red"))
+
+# Plot s1CA against time
+ggplot(CompartmentsConc_corrected, aes(x = time, y = s1CA)) +
+  geom_line(aes(color = "dynamic")) +
+  geom_hline(yintercept = s1CA_conc, linetype = "dashed", color = "red", show.legend = TRUE) +
+  labs(title = "Plot of s1CA against Time",
+       x = "Time [s]",
+       y = "s1CA [ng/L]") +
+  theme_minimal() +
+  scale_color_manual(name = "Legend", values = c("dynamic" = "blue", "steady" = "red"))
+
+```
 
 ```{r Comparison Steady Concentration}
-FinalConcentration <- FinalConcentration %>%
-  mutate(across(where(is.numeric), ~ . * 1e9))
+
 Concentration_eq <- Concentration_eq |>
   mutate(Concentration = as.numeric(format(Concentration, scientific = FALSE)))
 FinalConcentration <- FinalConcentration |>
   mutate(Concentration = as.numeric(format(Concentration, scientific = FALSE)))
-FinalConcentration <- FinalConcentration %>%
-  mutate(across(where(is.numeric), ~ . * 1e9))
+
 
 DiffSteadyDynamic <- FinalConcentration |>
   left_join(Concentration_eq, by = c("Compartment" = "Abbr")) |>
